(library
 (name expect_test_helpers)
 (public_name expect-test-helpers)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -w
  -70)
 (libraries base base_quickcheck sexp_pretty stdio)
 (inline_tests)
 (preprocess
  (pps
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_message
   ppx_sexp_value)))
